Fix embed widget titlebar not showing when minimized

--- a/public/s/styles/scss/embed.scss
+++ b/public/s/styles/scss/embed.scss
@@ -9,23 +9,27 @@ $bar-height: 49px !default;
 	background: transparent;
 
 	&.scrollback-toast {
-		@include prefix(box-shadow, 0 0 5px 1px rgba(0,0,0,.1));
+		@include prefix(box-shadow, 0 0 5px 1px rgba(0, 0, 0, .1));
 		@include prefix(transition, .15s ease);
-		@include prefix(transform, translate3d(0,0,0));
+		@include prefix(transform, translate3d(0, $bar-height, 0));
 
 		position: fixed;
-		bottom: 0;
+		bottom: $bar-height;
 		right: $offset-right;
 		height: $widget-height;
 		width: $widget-width;
 		max-height: 100%;
 		max-width: 100%;
 		border: 1px solid #ccc;
-		border: 1px solid rgba(0,0,0,.2);
+		border: 1px solid rgba(0, 0, 0, .2);
 		border-bottom: none;
 		z-index: 999;
 
-		&.scrollback-minimized { height: $bar-height; }
+		&.scrollback-minimized {
+            @include prefix(transform, translate3d(0, $widget-height, 0));
+
+            @media only screen and (max-height: $widget-height) { @include prefix(transform, translate3d(0, 100%, 0)); }
+        }
 
 		@media only screen and (max-width: $widget-width + ($offset-right * 2)) { right: 0; }
 	}
